переезжаем на другой сервер

--- a/ansible/group_vars/main.yml
+++ b/ansible/group_vars/main.yml
@@ -4,3 +4,4 @@ www:
   cert_root: /etc/letsencrypt/live/vavilova15.tom.ru
 misc:
   email: mic@demerzov.ru
+group_address: https://chat.whatsapp.com/Bsrah9eNYSuCKekww73vbI
