будем переписывать локальные изменения (ибо нефиг)

--- a/ansible/roles/www/tasks/main.yml
+++ b/ansible/roles/www/tasks/main.yml
@@ -13,6 +13,7 @@
   git:
     repo: https://github.com/micdm/vavilova15.git
     dest: "{{ www.project_root }}"
+    force: yes
 
 - name: start and enable nginx
   service:
